<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="textStart"
    tools:context=".Carrito">

    <Button
        android:id="@+id/comprar_bot"
        android:layout_width="183dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="#1C5D99"
        android:onClick="comprar"
        android:text="@string/comprar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageButton
        android:id="@+id/atras_bot3"
        android:layout_width="54dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="irAtras"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@mipmap/atras" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:fontFamily="@font/hind_semibold"
        android:text="@string/carrito"
        android:textColor="#1F3F5D"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/atras_bot3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/atras_bot3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124"
        app:srcCompat="@mipmap/linea" />

    <ListView
        android:id="@+id/lista_carrito"
        android:layout_width="291dp"
        android:layout_height="400dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/fondo_carrito"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="249dp"
        android:text="@string/total"
        android:textColor="#1C5C98"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lista_carrito"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/total_txt"
        android:layout_width="218dp"
        android:layout_height="32dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="201dp"
        android:text="@string/cero"
        android:textColor="#1C5C98"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.32999998" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="290dp"
        android:layout_height="71dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="61dp"
        android:fontFamily="@font/hind_medium"
        android:lineSpacingExtra="-3sp"
        android:text="@string/txt_carrito"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>