<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cuenta">

    <ImageButton
        android:id="@+id/atras_bot5"
        android:layout_width="54dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="irAtras"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        app:srcCompat="@mipmap/atras" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124"
        app:srcCompat="@mipmap/linea" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:fontFamily="@font/hind_medium"
        android:text="@string/cuenta"
        android:textColor="#213140"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/atras_bot5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/atras_bot5"
        app:layout_constraintVertical_bias="0.39" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="262dp"
        android:layout_height="260dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/persona_fondo" />

    <EditText
        android:id="@+id/cntr_et"
        android:layout_width="161dp"
        android:layout_height="46dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.35000002" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/usuario"
        android:textColor="#39576D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/email"
        android:textColor="#39576D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <EditText
        android:id="@+id/dir_et"
        android:layout_width="229dp"
        android:layout_height="44dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/contraseña"
        android:textColor="#39576D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="273dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/direccion"
        android:textColor="#39576D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <EditText
        android:id="@+id/nombre_et"
        android:layout_width="247dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.368" />

    <TextView
        android:id="@+id/nombreCuenta_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hind_semibold"
        android:text="TextView"
        android:textColor="#1C5C98"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/guardar_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#1C5C98"
        android:onClick="guardarCambios"
        android:text="@string/guardar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="ocultar"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/cntr_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/cntr_et"
        app:layout_constraintTop_toTopOf="@+id/cntr_et"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ojo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/hind_medium"
        android:text="@string/informacion"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guardar_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dir_et"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>